--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Responsive Movies Website</title>
+     <title>Steppa Movies Website</title>
        <!-- Link to CSS --> 
     <link rel="stylesheet" href="styles.css">
     <!-- link of swiper css -->
